py-qt6-webengine/TODO
/usr/pkgsrc/wip/py-qt6-webengine/work/PyQt6_WebEngine-6.8.0/sip/QtWebEngineCore/qwebengineframe.sip: In lambda function:
/usr/pkgsrc/wip/py-qt6-webengine/work/PyQt6_WebEngine-6.8.0/sip/QtWebEngineCore/qwebengineframe.sip:52:64: error: invalid use of incomplete type 'class QVariant'
   52 |             res = sipCallMethod(NULL, a1, "N", new QVariant(arg), sipType_QVariant, NULL);
      |                                                                ^
In file included from /usr/pkgsrc/wip/py-qt6-webengine/work/.buildlink/qt6/include/QtCore/qtypeinfo.h:9,
                 from /usr/pkgsrc/wip/py-qt6-webengine/work/.buildlink/qt6/include/QtCore/qglobal.h:47,
                 from /usr/pkgsrc/wip/py-qt6-webengine/work/.buildlink/qt6/include/QtCore/qmetatype.h:9,
                 from /usr/pkgsrc/wip/py-qt6-webengine/work/.buildlink/qt6/include/QtCore/QMetaType:1,
                 from sipAPIQtWebEngineCore.h:33,
                 from sipQtWebEngineCoreQWebEngineFrame.cpp:24:
/usr/pkgsrc/wip/py-qt6-webengine/work/.buildlink/qt6/include/QtCore/qcontainerfwd.h:49:7: note: forward declaration of 'class QVariant'
   49 | class QVariant;
      |       ^~~~~~~~
/usr/pkgsrc/wip/py-qt6-webengine/work/PyQt6_WebEngine-6.8.0/sip/QtWebEngineCore/qwebengineframe.sip: In lambda function:
/usr/pkgsrc/wip/py-qt6-webengine/work/PyQt6_WebEngine-6.8.0/sip/QtWebEngineCore/qwebengineframe.sip:79:64: error: invalid use of incomplete type 'class QVariant'
   79 |             res = sipCallMethod(NULL, a2, "N", new QVariant(arg), sipType_QVariant, NULL);
      |                                                                ^
/usr/pkgsrc/wip/py-qt6-webengine/work/.buildlink/qt6/include/QtCore/qcontainerfwd.h:49:7: note: forward declaration of 'class QVariant'
   49 | class QVariant;
      |       ^~~~~~~~
*** Error code 1
